samples/_failures_safe/1761446891_9fd7ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85f8fa54.c: In function ‘main’:
./samples/SAFE/__tmp_85f8fa54.c:176:15: error: incompatible types when assigning to type ‘int’ from type ‘struct Token’
  176 |         col = token
      |               ^~~~~
./samples/SAFE/__tmp_85f8fa54.c:176:20: error: expected ‘;’ at end of input
  176 |         col = token
      |                    ^
      |                    ;
./samples/SAFE/__tmp_85f8fa54.c:176:9: error: expected declaration or statement at end of input
  176 |         col = token
      |         ^~~
./samples/SAFE/__tmp_85f8fa54.c:176:9: error: expected declaration or statement at end of input
